auth/ory/yaml/kratos-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    project: secu
    system: ory
    component: kratos
  name: kratos
spec:
  selector:
    matchLabels:
      project: secu
      system: ory
      component: kratos
  template:
    metadata:
      labels:
        project: secu
        system: ory
        component: kratos
    spec:
      containers:
        - args:
            - serve
            - -c
            - /etc/config/kratos/kratos.yml
            - --dev
            - --watch-courier
          image: oryd/kratos:v0.8.0-alpha.3
          name: kratos
          ports:
            - containerPort: 4433
            - containerPort: 4434
          volumeMounts:
            - mountPath: /etc/config/kratos
              name: kratos-config
      restartPolicy: Always
      volumes:
        - name: kratos-config
          configMap:
            name: kratos-config
