auth/ory/yaml/kratos-migrate-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kratos-migrate
spec:
  restartPolicy: Never
  containers:
    - args:
        - -c
        - /etc/config/kratos/kratos.yml
        - migrate
        - sql
        - -e
        - --yes
      image: oryd/kratos:v0.8.0-alpha.3
      name: kratos-migrate
      volumeMounts:
        - mountPath: /etc/config/kratos
          name: kratos-config
  volumes:
    - name: kratos-config
      configMap:
        name: kratos-config
