auth/ory/yaml/kratos-selfservice-ui-node-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    project: secu
    system: ory
    component: kratos-selfservice-ui-node
  name: kratos-selfservice-ui-node
spec:
  ports:
    - name: "4455"
      port: 4455
      targetPort: 3000
  selector:
    project: secu
    system: ory
    component: kratos-selfservice-ui-node
