auth/ory/yaml/mailslurper-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    project: secu
    system: ory
    component: mailslurper
  name: mailslurper
spec:
  ports:
    - name: "4436"
      port: 4436
      targetPort: 4436
    - name: "4437"
      port: 4437
      targetPort: 4437
    - name: "1025"
      port: 1025
      targetPort: 1025
  selector:
    project: secu
    system: ory
    component: mailslurper
