auth/ory/yaml/oathkeeper-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    project: secu
    system: ory
    component: oathkeeper
  name: oathkeeper
spec:
  ports:
    - port: 8080
      name: "http"
      protocol: TCP
      targetPort: 4455
    - port: 4456
      name: "4456"
      protocol: TCP
      targetPort: 4456
  selector:
    project: secu
    system: ory
    component: oathkeeper
