auth/ory/yaml/postgres-kratos-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-kratos
spec:
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  selector:
    project: secu
    system: ory
    component: postgres-kratos
